--- a/src/lab/ddtabmenufiles/glowtabs.css
+++ b/src/lab/ddtabmenufiles/glowtabs.css
@@ -1,8 +1,6 @@
-.glowingtabs
-{
- float:left;
+.glowingtabs{
+float:left;
 width:100%;
-
 line-height:normal;
 border-bottom: 2px solid #7e9fff; /*Add border strip to bottom of menu*/
 }
